# Shuriken-Analyzer

./: .clang-tidy  CMakeLists.txt  Dex_2parser_8h.html  Dex_2parser_8h.js  Dex_2parser_8h__dep__incl.map  Dex_2parser_8h__dep__incl.md5  Dex_2parser_8h_source.html  LICENSE  Macho_2parser_8h.html  Macho_2parser_8h.js  Macho_2parser_8h__dep__incl.map  Macho_2parser_8h__dep__incl.md5  Macho_2parser_8h__incl.map  Macho_2parser_8h__incl.md5  Macho_2parser_8h_source.html  analysis_8h.html  analysis_8h__dep__incl.map  analysis_8h__dep__incl.md5  analysis_8h__incl.map  analysis_8h__incl.md5  analysis_8h_source.html  annotated.html  annotated_dup.js  apk_8h.html  apk_8h__dep__incl.map  apk_8h__dep__incl.md5  apk_8h__incl.map  apk_8h__incl.md5  apk_8h_source.html  classes.html  classexceptions_1_1InvalidInstructionException.html  classshuriken_1_1analysis_1_1dex_1_1MethodAnalysis-members.html  classshuriken_1_1analysis_1_1dex_1_1MethodAnalysis.html  classshuriken_1_1disassembler_1_1dex_1_1DexOpcodes.html  classshuriken_1_1parser_1_1dex_1_1Parser.html  classshuriken_1_1parser_1_1ipa_1_1Ipa-members.html  classshuriken_1_1parser_1_1ipa_1_1Ipa.html  classshuriken_1_1parser_1_1ipa_1_1Ipa.js  classshuriken_1_1parser_1_1macho_1_1MachoCommands-members.html  classshuriken_1_1parser_1_1macho_1_1MachoCommands.html  (+276 more)
binary-ninja/: CMakeLists.txt
binary-ninja/arch-dalvik/: CMakeLists.txt
binary-ninja/arch-dalvik/inc/: plugin.h
binary-ninja/arch-dalvik/src/: arch-dalvik.cpp  plugin.cpp
binary-ninja/binja-api/: CMakeLists.txt
binary-ninja/shuriken-service/: CMakeLists.txt
binary-ninja/shuriken-service/inc/: render.h  shurikenservice.h  shurikenservice_internal.h
binary-ninja/shuriken-service/src/: render.cpp  shurikenservice.cpp  shurikenview.cpp
binary-ninja/view-dex/: CMakeLists.txt
binary-ninja/view-dex/inc/: plugin.h
binary-ninja/view-dex/src/: dexview.cpp  dexviewtype.cpp  plugin.cpp
cmake/: cmake_install_uninstall.cmake
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  (+36 more)
shuriken-lib/: CMakeLists.txt
shuriken-lib/cmake/: ShurikenConfig.cmake.in  cmake_uninstall.cmake.in
shuriken-lib/include/shuriken/api/C/: shuriken_sdk_data.h
shuriken-lib/include/shuriken/internal/engine/dex/: dex_engine.hpp
shuriken-lib/include/shuriken/internal/engine/dex/parser/: class_data_item.hpp  class_def.hpp  dex_field.hpp  dex_header.hpp  encoded_data.hpp  field_id.hpp  method_id.hpp  parser.hpp
shuriken-lib/include/shuriken/internal/io/: shurikenstream.hpp
shuriken-lib/include/shuriken/internal/providers/dex/: custom_types.hpp  dex_class_provider.hpp  dex_field_provider.hpp  dex_instructions.hpp  dex_method_provider.hpp  dvm_prototypes_provider.hpp  dvm_types_provider.hpp
shuriken-lib/include/shuriken/sdk/common/: deref_iterator_range.hpp  error.hpp  iterator_range.hpp
shuriken-lib/include/shuriken/sdk/dex/: class.h  class.hpp  constants.hpp  custom_types.hpp  dex.hpp  disassembly_constants.hpp  dvm_prototypes.hpp  dvm_types.hpp  external_field.hpp  external_method.hpp  field.hpp  instruction.hpp  method.hpp
shuriken-lib/include/shuriken/sdk/dex/definitions/: dvm_opcodes.def
shuriken-lib/lib/: CMakeLists.txt
shuriken-lib/lib/engine/: CMakeLists.txt
shuriken-lib/lib/engine/dex/: CMakeLists.txt  dex_engine.cpp
shuriken-lib/lib/engine/dex/parser/: CMakeLists.txt  class_data_item.cpp  class_def.cpp  dex_header.cpp  encoded_data.cpp  field_id.cpp  method_id.cpp  parser.cpp
shuriken-lib/lib/io/: CMakeLists.txt  shurikenstream.cpp
shuriken-lib/lib/providers/: CMakeLists.txt
shuriken-lib/lib/providers/dex/: CMakeLists.txt  dex_class_provider.cpp  dex_field_provider.cpp  dex_instructions.cpp  dex_method_provider.cpp  dvm_prototypes_provider.cpp  dvm_types_provider.cpp
shuriken-lib/lib/providers/dex/definitions/: dvm_ins_names.def  dvm_inst_operation.def  opcode_kind.def
shuriken-lib/lib/sdk/dex/: CMakeLists.txt  class.cpp  dex.cpp  dvm_prototypes.cpp  dvm_types.cpp  field.cpp  method.cpp
shuriken-lib/tests/: CMakeLists.txt
shuriken-lib/tests/dex/: dex_loading_tests.cpp  dvm_prototypes_tests.cpp  dvm_type_tests.cpp
shuriken/mjolnir/: CMakeLists.txt
shuriken/mjolnir/include/: CMakeLists.txt  shuriken_opt.h
shuriken/mjolnir/include/dalvik/: CMakeLists.txt  DalvikDialect.h  DalvikDialect.td  DalvikOps.h  DalvikOps.td  DalvikPatterns.td
shuriken/mjolnir/include/mjolnir/: CMakeLists.txt  MjolnIRDialect.h  MjolnIROps.h  MjolnIROps.td  MjolnIRTypes.h  MjolnIRTypes.td
shuriken/mjolnir/include/mjolnir/dalvik/: CMakeLists.txt  MjolnIRDialect.td  MjolnIROps.h  MjolnIROps.td  MjolnIRTypes.h  MjolnIRTypes.td
shuriken/mjolnir/include/mjolnir/dialect/: mjolnir.td
shuriken/mjolnir/include/passes/: mjolir_to_smali.h  opt.h
shuriken/mjolnir/include/transform/: lifter.h  lower.h  mjolnir_to_smali.h  opt.h  reg_alloc.h
shuriken/mjolnir/lib/: CMakeLists.txt  shuriken_opt_lib.cpp
shuriken/mjolnir/lib/dalvik/: CMakeLists.txt  DalvikDialect.cpp  DalvikOps.cpp
shuriken/mjolnir/lib/mjolnir/: CMakeLists.txt  MjolnIROps.cpp
shuriken/mjolnir/lib/passes/: CMakeLists.txt  mjolir_to_smali.cpp  opt.cpp  opt_const_prop.cpp
shuriken/mjolnir/lib/transform/: CMakeLists.txt  lifter.cpp  mjolnir_to_smali.cpp
shuriken/mjolnir/lib/transform/lift_instructions/: Instruction10t.cpp  Instruction10x.cpp  Instruction11n.cpp  Instruction11x.cpp  Instruction12x.cpp  Instruction20t.cpp  Instruction21c.cpp  Instruction21h.cpp  Instruction21s.cpp  Instruction21t.cpp  Instruction22b.cpp  Instruction22c.cpp  Instruction22s.cpp  Instruction22t.cpp  Instruction22x.cpp  Instruction23x.cpp  Instruction30t.cpp  Instruction31c.cpp  Instruction31i.cpp  Instruction32x.cpp  Instruction35c.cpp  Instruction51l.cpp
shuriken/mjolnir/lib/transform/lower_instructions/: arith_to_smali.cpp  cf_to_smali.cpp  mjolnir_to_smali.cpp
shuriken/mjolnir/lib/transform/reg_alloc/: linear_reg_alloc.cpp
shuriken/mjolnir/src/: shuriken_opt.cpp
shuriken/tests/ipa/: CMakeLists.txt  ipa-files-folder.in  parse-test-ipa.cpp
shuriken/tests/macho/parser/: CMakeLists.txt  headers-test-macho.cpp  parse-test-macho.cpp
(+97 files in other folders)
